fix(content-page): fix block select overflow + content shadow, 0.12.2

--- a/demo/src/react-admin/modules/content-page/views/ContentPageEdit.scss
+++ b/demo/src/react-admin/modules/content-page/views/ContentPageEdit.scss
@@ -1,15 +1,61 @@
 @import '../../shared/styles/settings/colors';
 
 $content-top-bar-and-tabs-height: 113px;
+$top-navigation-bar-height: 8.8rem;
+$content-page-header-height: 16.2rem;
+$content-page-tabs-height: 5rem;
+$content-page-sidebar-margin: 4rem;
+$content-page-sidebar-blok-dropdown-height: 7rem;
+
+.m-resizable-panels {
+	> div {
+		> .resizable-fragment {
+			width: 100%;
+			overflow: visible !important;
+		}
+
+		> div:not(.resizable-fragment) {
+			position: relative;
+			background-color: rgba($color-gray-50, 0.4);
+			height: calc(
+				100vh - $top-navigation-bar-height - $content-page-header-height -
+					$content-page-tabs-height - $content-page-sidebar-margin
+			) !important;
+
+			&:after {
+				content: '||';
+				border: solid 1px #666;
+				border-width: 0 1px;
+				margin: -10px 0 0 3.5px;
+				height: 20px;
+				width: 4px;
+				overflow: hidden;
+				color: transparent;
+				top: 50%;
+				left: 3px;
+				transform: translateX(-50%);
+				position: absolute;
+			}
+		}
+	}
+}
 
 .c-content-edit-view__sidebar {
-	height: calc(100vh - #{$content-top-bar-and-tabs-height});
+	min-height: calc(
+		100vh - $top-navigation-bar-height - $content-page-header-height - $content-page-tabs-height
+	);
 
 	> .o-sidebar__content {
 		> .c-scrollable {
 			width: 100%;
 			overflow-y: auto;
 			padding: 2rem 1.6rem 8rem;
+			box-sizing: border-box;
+			height: calc(
+				100vh - $top-navigation-bar-height - $content-page-header-height -
+					$content-page-tabs-height - $content-page-sidebar-margin -
+					$content-page-sidebar-blok-dropdown-height
+			);
 		}
 
 		> .c-navbar {
@@ -37,19 +83,11 @@ $content-top-bar-and-tabs-height: 113px;
 .c-content-edit-view__preview {
 	width: 100%;
 	height: calc(100vh - #{$content-top-bar-and-tabs-height});
-	overflow-y: auto;
+	overflow-y: visible;
 	overflow-x: hidden;
 	background-color: white;
 
 	.c-content-block-preview > .o-container {
 		overflow-wrap: break-word;
-	}
-}
-
-.m-resizable-panels.m-edit-content-blocks {
-	> div {
-		> div:not(.resizable-fragment) {
-			height: calc(100vh - #{$content-top-bar-and-tabs-height}) !important;
-		}
 	}
 }
